Use JavaScript for all benchmarks
